# Agentic-RAG-Research-Assistant

./: .gitignore  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  retriever.py  router.py  streamlit_app.py  test_ingest.py  test_query.py  test_router.py  vector_db.py
eval/: eval_set.json  run_eval.py
