[project]
name = "agentic-rag-research-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "inngest>=0.5.18",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-groq>=0.5.0",
    "llama-index-readers-file>=0.6.0",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
